# AzureNexus

./: CMakeLists.txt  Cargo.toml  ColorsConfig.h  LICENSE  README.md  SignIn.qml  SignUp.qml  luaconfigmanager.cpp  luaconfigmanager.h  main.cpp  main.qml  quicclientwrapper.cpp  quicclientwrapper.h  splashscreen.cpp  splashscreen.h
src/: main.rs
src/server/: server.rs
